@@ -1745,6 +1745,7 @@ $wgMessageStructure = array(
 		'ipbhidename',
 		'ipbwatchuser',
 		'ipballowusertalk',
+		'ipb-change-block',
 		'badipaddress',
 		'blockipsuccesssub',
 		'blockipsuccesstext',
@@ -1784,6 +1785,7 @@ $wgMessageStructure = array(
 		'blocklogpage',
 		'blocklog-fulllog',
 		'blocklogentry',
+		'reblock-logentry',
 		'blocklogtext',
 		'unblocklogentry',
 		'block-log-flags-anononly',
@@ -1796,6 +1798,7 @@ $wgMessageStructure = array(
 		'ipb_expiry_invalid',
 		'ipb_expiry_temp',
 		'ipb_already_blocked',
+		'ipb-needreblock',
 		'ipb_cant_unblock',
 		'ipb_blocked_as_range',
 		'ip_range_invalid',
